# endless-sky--rising-leaf

./: .clang-format  .gitignore  CMakeLists.txt  README.md
dependencies/SDL3/: CMakeLists.txt
dependencies/flac/: CMakeLists.txt
dependencies/libavif/: CMakeLists.txt
dependencies/libjpeg-turbo/: CMakeLists.txt
dependencies/libpng/: CMakeLists.txt
dependencies/miniaudio/: CMakeLists.txt
dependencies/miniz/: CMakeLists.txt
dependencies/openal-soft/: CMakeLists.txt
shaders/: CMakeLists.txt  batch.pps  common_uniform_data.glsl  common_uniform_data.metal  fill.pps  fog.pps  font.pps  line.pps  outline.pps  pointer.pps  renderBuffer.pps  ring.pps  sprite.pps  starfield.pps
source/: AI.cpp  AI.h  Account.cpp  Account.h  AlertLabel.cpp  AlertLabel.h  AmmoDisplay.cpp  AmmoDisplay.h  Angle.cpp  Angle.h  Animate.h  Armament.cpp  Armament.h  AsteroidField.cpp  AsteroidField.h  BankPanel.cpp  BankPanel.h  Bitset.cpp  Bitset.h  BoardingPanel.cpp  BoardingPanel.h  Body.cpp  Body.h  BookEntry.cpp  BookEntry.h  CMakeLists.txt  Camera.cpp  Camera.h  CaptureOdds.cpp  CaptureOdds.h  CargoHold.cpp  CargoHold.h  CategoryList.cpp  CategoryList.h  CategoryType.h  ClickZone.h  Collision.cpp  Collision.h  CollisionSet.cpp  CollisionSet.h  (+309 more)
source/audio/: Audio.cpp  Audio.h  Music.cpp  Music.h  Sound.cpp  Sound.h  SoundCategory.h
source/audio/player/: AudioPlayer.cpp  AudioPlayer.h  MusicPlayer.cpp  MusicPlayer.h
source/audio/supplier/: AsyncAudioSupplier.cpp  AsyncAudioSupplier.h  AudioSupplier.cpp  AudioSupplier.h  FlacSupplier.cpp  FlacSupplier.h  Mp3Supplier.cpp  Mp3Supplier.h  WavSupplier.cpp  WavSupplier.h
source/audio/supplier/effect/: Fade.cpp  Fade.h
source/comparators/: ByDisplayName.h  ByGivenOrder.h  ByName.h  BySeriesAndIndex.h  ByUUID.h
source/image/: BlendingMode.h  ImageBuffer.cpp  ImageBuffer.h  ImageFileData.cpp  ImageFileData.h  ImageSet.cpp  ImageSet.h  Mask.cpp  Mask.h  MaskManager.cpp  MaskManager.h  Sprite.cpp  Sprite.h  SpriteLoadManager.cpp  SpriteLoadManager.h  SpriteSet.cpp  SpriteSet.h
source/orders/: OrderSet.cpp  OrderSet.h  OrderSingle.cpp  OrderSingle.h  Orders.cpp  Orders.h
source/risingleaf_shared/: CMakeLists.txt
source/risingleaf_shared/base/: ASLList.h  ASLListAllocator.h  ASLTypes.h  ASLUtility.h  concepts.h
source/risingleaf_shared/graphics/: Frustum.h  ShaderInfo.cpp  ShaderInfo.h  View.cpp  View.h  graphics_layer.cpp  graphics_layer.h  graphics_toplevel_defines.h
source/risingleaf_shared/graphics/metal/: graphics_metal.cpp  graphics_metal.h
source/risingleaf_shared/graphics/vulkan/: VulkanBootstrap.cpp  VulkanBootstrap.h  VulkanBufferInstance.cpp  VulkanBufferInstance.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDeviceInstance.cpp  VulkanDeviceInstance.h  VulkanFrameBufferInstance.cpp  VulkanFrameBufferInstance.h  VulkanHelpers.cpp  VulkanHelpers.h  VulkanPipelineState.h  VulkanRenderPassInstance.cpp  VulkanRenderPassInstance.h  VulkanShaderInstance.cpp  VulkanShaderInstance.h  VulkanSwapChainInstance.cpp  VulkanSwapChainInstance.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTranslate.h  graphics_vulkan.cpp  graphics_vulkan.h
source/risingleaf_shared/math/graphics_math/: exterior.h  gm.h  mat_helpers.h  matrix.h  vec_helpers.h  vector.h
source/risingleaf_shared/system/: DebugMessenger.cpp  DebugMessenger.h  EventBridge.cpp  EventBridge.h  Events.cpp  Events.h  File.cpp  File.h  Log.cpp  Log.h  Timer.cpp  Timer.h
source/shader/: BatchDrawList.cpp  BatchDrawList.h  BatchShader.cpp  BatchShader.h  DrawList.cpp  DrawList.h  FillShader.cpp  FillShader.h  FogShader.cpp  FogShader.h  LineShader.cpp  LineShader.h  OutlineShader.cpp  OutlineShader.h  PointerShader.cpp  PointerShader.h  RingShader.cpp  RingShader.h  Shader.cpp  Shader.h  SpriteShader.cpp  SpriteShader.h  StarField.cpp  StarField.h  mat2.h
source/ship/: ShipAICache.cpp  ShipAICache.h
source/test/: Test.cpp  Test.h  TestContext.cpp  TestContext.h  TestData.cpp  TestData.h
source/text/: Alignment.h  Clipboard.cpp  Clipboard.h  DisplayText.cpp  DisplayText.h  Font.cpp  Font.h  FontSet.cpp  FontSet.h  Format.cpp  Format.h  Layout.h  Table.cpp  Table.h  Truncate.h  Utf8.cpp  Utf8.h  WrappedText.cpp  WrappedText.h
source/windows/: TimerResolutionGuard.cpp  TimerResolutionGuard.h  WinConsole.cpp  WinConsole.h  WinVersion.cpp  WinVersion.h  WinWindow.cpp  WinWindow.h
utils/: preprocess_shader.py  preprocess_shader_metal.py
